tests/ui/de-enum-data.stderr
error: Invalid variant: only simple enum variants without fields are supported
 --> tests/ui/de-enum-data.rs:5:5
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
4 | enum Enum {
5 |     Variant(i32)
  |     ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
