tests/ui/de-enum-data.rs
use miniserde::Deserialize;

#[derive(Deserialize)]
enum Enum {
    Variant(i32)
}

fn main() {}
